force-app/main/default/objects/Reassignment_Eval_Criteria__c/Reassignment_Eval_Criteria__c.object-meta.xml
<CustomObject>
    <description>The data metrics used to determine whether an Acct/Ship To is &quot;Flagged for Reassignment&quot;.</description>
    <label>Reassignment Eval Criteria</label>
    <nameField>
        <label>Reassignment Eval Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reassignment Eval Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>