force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Account_Reassignment_Record__c.field-meta.xml
<CustomField>
    <fullName>Account_Reassignment_Record__c</fullName>
    <label>Account Reassignment Record</label>
    <referenceTo>Account_Reassignment__c</referenceTo>
    <relationshipLabel>Reassignment Eval Criteria</relationshipLabel>
    <relationshipName>Reassignment_Eval_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>