force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Bottom_x_Flag__c.field-meta.xml
<CustomField>
    <fullName>Bottom_x_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bottom x% Flag</label>
    <type>Checkbox</type>
</CustomField>