force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Category_Count__c.field-meta.xml
<CustomField>
    <fullName>Category_Count__c</fullName>
    <label>Category Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>