force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Current_Sales_Day__c.field-meta.xml
<CustomField>
    <fullName>Current_Sales_Day__c</fullName>
    <label>Current Sales/Day</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>