force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Current_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Sales__c</fullName>
    <label>Current Year Sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>