force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Low_Revenue_Flag__c.field-meta.xml
<CustomField>
    <fullName>Low_Revenue_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Revenue Flag</label>
    <type>Checkbox</type>
</CustomField>