force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Prior_1_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Prior_1_Qtr__c</fullName>
    <label>Prior 1 Qtr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>