force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Prior_2_Qtr_Sales__c.field-meta.xml
<CustomField>
    <fullName>Prior_2_Qtr_Sales__c</fullName>
    <label>Prior 2 Qtr Sales</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>