force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Prior_6M_Sales_Day__c.field-meta.xml
<CustomField>
    <fullName>Prior_6M_Sales_Day__c</fullName>
    <label>Prior 6M Sales/Day</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>