force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Revenue_Decline_Flag__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Decline_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Decline Flag</label>
    <type>Checkbox</type>
</CustomField>