force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/Sales_Day_Variance__c.field-meta.xml
<CustomField>
    <fullName>Sales_Day_Variance__c</fullName>
    <label>Sales/Day Variance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>