force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/SFDC_Opp_Flag__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Opp_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No SFDC Activity Flag</label>
    <type>Checkbox</type>
</CustomField>