force-app/main/default/objects/Reassignment_Eval_Criteria__c/fields/YOY_Variance__c.field-meta.xml
<CustomField>
    <fullName>YOY_Variance__c</fullName>
    <label>YOY Variance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>